# code-vault

./: .gitignore  CHANGELOG.md  README.md  Run Desktop App.bat  backend_service.py  make_admin.py  pyproject.toml  requirements.txt
.github/workflows/: main.yml
cli/: README.md  cli_config.py  config.json  lw-compiler.bat  lw_compiler.py  pyproject.toml  terminal.py  wrappers.py
docs/: PROJECT_DOCUMENTATION.md  PROJECT_REFERENCE.md  data_flow.md
docs/inspections/: audit_report_dec_23.md  bug_fix_inspection_dec_23.md  codeql_alert_inspection.md  python_build_inspection_dec_23.md  report_2025_12_24_build_fix.md  wrapper_inspection.md
docs/plans/: desktop_to_web_migration.md  nodejs_desktop_production.md  nodejs_desktop_support.md  saas_expansion_overview.md  saas_expansion_technical.md
docs/reality-check/: 2025-12-24_market_and_tech_audit.md  competitors.md  reality_check_report.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: CompilationModal.jsx  ConfirmDialog.jsx  CopyButton.jsx  EmptyState.jsx  Layout.jsx  Modal.jsx  PrerequisitesCheck.jsx  Skeleton.jsx  Spinner.jsx  Toast.jsx  index.js
frontend/src/components/dashboard/: ActivityItem.jsx  ExpiringLicense.jsx  LiveMap.jsx  MachinesList.jsx  StatCard.jsx  ValidationChart.jsx  index.js
frontend/src/components/licenses/: BindingsModal.jsx  CreateLicenseModal.jsx  LicenseRow.jsx  LicenseTable.jsx  index.js
frontend/src/components/projects/: BuildPresetsManager.jsx  CLIDownloadSection.jsx  ConfigureProjectModal.jsx  CreateProjectModal.jsx  DirectBuildSection.jsx  ProjectCard.jsx  ProjectWizard.jsx  WizardStepIndicator.jsx  index.js
frontend/src/components/projects/WizardSteps/: Step1Upload.jsx  Step2Review.jsx  Step3Configure.jsx  Step4License.jsx  Step5Build.jsx  index.js
frontend/src/components/webhooks/: DeliveriesModal.jsx  EventsInfo.jsx  WebhookFormModal.jsx  WebhookRow.jsx  WebhookTable.jsx  index.js
frontend/src/contexts/: BuildContext.jsx  SettingsContext.jsx
frontend/src/pages/: AdminDashboard.jsx  Billing.jsx  BuildSettings.jsx  Dashboard.jsx  Licenses.jsx  Login.jsx  Pricing.jsx  Projects.jsx  Settings.jsx  Webhooks.jsx
frontend/src/services/: api.js  pricingService.js  tauri-api.js
frontend/src/utils/: EncryptionProvider.js
server/: config.py  database.py  email_service.py  main.py  models.py  package-lock.json  package.json  populate_mock_map.py  requirements.txt  startup_checks.py  storage_service.py  utils.py
server/compilers/: __init__.py  build_orchestrator.py  nodejs_compiler.py  nsis_builder.py  python_compiler.py
server/compilers/templates/: license_dialog.html  license_dialog.ps1  license_dialog.py  nodejs_license_wrapper.js
server/middleware/: tier_enforcement.py
server/migrations/: 005_tier_sync_improvements.sql
server/routes/: __init__.py  admin_routes.py  analytics_routes.py  auth_routes.py  compile_helpers.py  license_routes.py  project_helpers.py  stripe_routes.py  stripe_webhook_handlers.py  webhook_routes.py
src-tauri/: Cargo.toml  DEPRECATED.md  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: backend_manager.rs  lib.rs  main.rs
src-tauri/src/commands/: compiler.rs  downloader.rs  mod.rs  projects.rs  settings.rs
src-tauri/src/db/: mod.rs  schema.rs
tests/: test_api_endpoints.py  test_structure.py
