[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "license-wrapper"
version = "1.0.0"
description = "Wrap Python scripts with license protection and compile to executables"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "License-Wrapper Team", email = "support@license-wrapper.com"}
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Security",
]
keywords = ["license", "protection", "drm", "executable", "nuitka", "compiler"]

dependencies = [
    "requests>=2.28.0",
    "cryptography>=40.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]
compile = [
    "nuitka>=2.0",
    "ordered-set",
    "zstandard",
]

[project.scripts]
lw-compiler = "cli.lw_compiler:main"

[project.urls]
Homepage = "https://license-wrapper.com"
Documentation = "https://docs.license-wrapper.com"
Repository = "https://github.com/license-wrapper/license-wrapper"
Issues = "https://github.com/license-wrapper/license-wrapper/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["cli*"]

[tool.setuptools.package-dir]
"" = "."

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
