[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codevault-cli"
version = "1.0.0"
description = "CodeVault CLI - Local compilation tool for license-protected executables"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["compiler", "nuitka", "license", "protection", "executable", "codevault"]
authors = [
    { name = "CodeVault Team" }
]
dependencies = [
    "requests>=2.28.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
]

[project.scripts]
codevault-cli = "lw_compiler:main"

[project.urls]
Homepage = "https://github.com/your-org/codevault"
Documentation = "https://github.com/your-org/codevault#readme"
Issues = "https://github.com/your-org/codevault/issues"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.build.targets.sdist]
include = [
    "*.py",
    "README.md",
]
